--- a/techsense/index.html
+++ b/techsense/index.html
@@ -38,7 +38,7 @@
             <li><a href="index.html/#room-section">Services</a></li>
             <li><a href="index.html/#gallery-section">About</a></li>
             <li><a href="index.html/#about-section">Career</a></li>
-            <li><a href="index.html/#contact-section">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href=""></a></li>
         </ul>
 
